--- a/src/styles/QuoteCard.module.css
+++ b/src/styles/QuoteCard.module.css
@@ -99,3 +99,13 @@
     padding: 0;
   }
 }
+
+@media (max-width: 1400px) {
+  .quote-box {
+    padding: 0.5em;
+    margin: 0.5rem 0;
+  }
+  .quote-title {
+    margin-top: 1rem;
+  }
+}
